update practice 2
update code assignment 2
